--- a/ZOHO_CONTACTS/src/main/webapp/WEB-INF/web.xml
+++ b/ZOHO_CONTACTS/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,19 @@
     <welcome-file>index.jsp</welcome-file>
  
   </welcome-file-list>
+  
+  
+    <filter>
+        <filter-name>Sessionfilter</filter-name>
+        <filter-class>SessionFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>Sessionfilter</filter-name>
+        <url-pattern>/*</url-pattern> 
+    </filter-mapping>
+  
+  
+  
 
   <servlet>
   <servlet-name>login</servlet-name>
