--- a/ZOHO_CONTACTS/src/main/webapp/WEB-INF/web.xml
+++ b/ZOHO_CONTACTS/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<display-name>ZOHO_CONTACTS</display-name>
 	<welcome-file-list>
 
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>Login.jsp</welcome-file>
 
 	</welcome-file-list>
 
@@ -34,6 +34,19 @@
 	<servlet-mapping>
 		<servlet-name>login</servlet-name>
 		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	
+	
+	
+	
+	<servlet>
+		<servlet-name>syncstate</servlet-name>
+		<servlet-class>servlets.OauthSyncStateServlet</servlet-class>
+
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>syncstate</servlet-name>
+		<url-pattern>/syncstate</url-pattern>
 	</servlet-mapping>
 
 
@@ -228,6 +241,30 @@
 		<url-pattern>/GetAndUpdatecontact</url-pattern>
 	</servlet-mapping>
 
+
+
+<servlet>
+		<servlet-name>oauthdirector</servlet-name>
+		<servlet-class>servlets.GoogleOauthdirectorServlet</servlet-class>
+
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>oauthdirector</servlet-name>
+		<url-pattern>/oauthdirector</url-pattern>
+	</servlet-mapping>
+
+
+
+
+<servlet>
+		<servlet-name>oauthredirect</servlet-name>
+		<servlet-class>servlets.GoogleOauthRedirectServlet</servlet-class>
+
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>oauthredirect</servlet-name>
+		<url-pattern>/oauthredirect</url-pattern>
+	</servlet-mapping>
 
 
 
