Code reform and Merge Implementaion

--- a/ZOHO_CONTACTS/config.properties
+++ b/ZOHO_CONTACTS/config.properties
@@ -1,2 +1,2 @@
-application.log.path=/home/nithya-pt7676/ZohoContactLogs/ApplicationLogs
-access.log.path=/home/nithya-pt7676/ZohoContactLogs/AccessLog
+application.log.path=/home/nithya-pt7676/ZohoContactLogs/ApplicationLogs/application.log
+access.log.path=/home/nithya-pt7676/ZohoContactLogs/AccessLog/access.log
