--- a/ZOHO_CONTACTS/src/main/webapp/WEB-INF/web.xml
+++ b/ZOHO_CONTACTS/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 
 	<filter>
 		<filter-name>Sessionfilter</filter-name>
-		<filter-class>filter.SessionFilter</filter-class>
+		<filter-class>com.zohocontacts.filter.SessionFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>Sessionfilter</filter-name>
@@ -23,31 +23,50 @@
 
 	<listener>
 
-		<listener-class>listener.ServerListener</listener-class>
+		<listener-class>com.zohocontacts.listener.ServerListener</listener-class>
 	</listener>
-<servlet>
-		<servlet-name>contactview</servlet-name>
-		<servlet-class>servlets.ContactViewRedirectServlet</servlet-class>
+
+
+
+	<servlet>
+		<servlet-name>user</servlet-name>
+		<servlet-class>com.zohocontacts.servlets.UserServlet</servlet-class>
 
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>contactview</servlet-name>
-		<url-pattern>/contactview</url-pattern>
+		<servlet-name>user</servlet-name>
+		<url-pattern>/user</url-pattern>
 	</servlet-mapping>
-	
-<servlet>
-		<servlet-name>mergecontact</servlet-name>
-		<servlet-class>servlets.ContactMergeServlet</servlet-class>
+
+
+
+
+	<servlet>
+		<servlet-name>group</servlet-name>
+		<servlet-class>com.zohocontacts.servlets.GroupServlet</servlet-class>
 
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>mergecontact</servlet-name>
-		<url-pattern>/mergecontact</url-pattern>
+		<servlet-name>group</servlet-name>
+		<url-pattern>/group</url-pattern>
 	</servlet-mapping>
+
+
+	<servlet>
+		<servlet-name>contact</servlet-name>
+		<servlet-class>com.zohocontacts.servlets.ContactServlet</servlet-class>
+
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>contact</servlet-name>
+		<url-pattern>/contact</url-pattern>
+	</servlet-mapping>
+
+
 
 	<servlet>
 		<servlet-name>logout</servlet-name>
-		<servlet-class>servlets.LogoutServlet</servlet-class>
+		<servlet-class>com.zohocontacts.servlets.LogoutServlet</servlet-class>
 
 	</servlet>
 	<servlet-mapping>
@@ -56,165 +75,47 @@
 	</servlet-mapping>
 	<servlet>
 		<servlet-name>login</servlet-name>
-		<servlet-class>servlets.LoginSignupServlet</servlet-class>
+		<servlet-class>com.zohocontacts.servlets.LoginSignupServlet</servlet-class>
 
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>login</servlet-name>
 		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
-	
-	
-		
+
+
+
 	<servlet>
 		<servlet-name>servercache</servlet-name>
-		<servlet-class>servlets.ServerCacheDeleteServlet</servlet-class>
+		<servlet-class>com.zohocontacts.servlets.ServerCacheDeleteServlet</servlet-class>
 
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>servercache</servlet-name>
 		<url-pattern>/servercache</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>sessioncache</servlet-name>
-		<servlet-class>servlets.SessionCacheHandleServlet</servlet-class>
+		<servlet-class>com.zohocontacts.servlets.SessionCacheHandleServlet</servlet-class>
 
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>sessioncache</servlet-name>
 		<url-pattern>/sessioncache</url-pattern>
 	</servlet-mapping>
-
-
-	
-	
 	<servlet>
 		<servlet-name>syncstate</servlet-name>
-		<servlet-class>servlets.OauthSyncStateServlet</servlet-class>
+		<servlet-class>com.zohocontacts.servlets.OauthSyncStateServlet</servlet-class>
 
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>syncstate</servlet-name>
 		<url-pattern>/syncstate</url-pattern>
 	</servlet-mapping>
-
-
-
-
-
-
-
-	<servlet>
-		<servlet-name>adduseremail</servlet-name>
-		<servlet-class>servlets.AddUserEmailServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>adduseremail</servlet-name>
-		<url-pattern>/adduseremail</url-pattern>
-	</servlet-mapping>
-
-
-
-
-	<servlet>
-		<servlet-name>changeuserpassword</servlet-name>
-		<servlet-class>servlets.ChangeUserPasswordServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>changeuserpassword</servlet-name>
-		<url-pattern>/changeuserpassword</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-		<servlet-name>deleteuseremail</servlet-name>
-		<servlet-class>servlets.DeleteUserEmailServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>deleteuseremail</servlet-name>
-		<url-pattern>/deleteuseremail</url-pattern>
-	</servlet-mapping>
-
-
-
-	<servlet>
-		<servlet-name>grouplist</servlet-name>
-		<servlet-class>servlets.GroupContactListServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>grouplist</servlet-name>
-		<url-pattern>/grouplist</url-pattern>
-	</servlet-mapping>
-
-
-
-
-	<servlet>
-		<servlet-name>groupaddcontact</servlet-name>
-		<servlet-class>servlets.GroupContactAddServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>groupaddcontact</servlet-name>
-		<url-pattern>/groupaddcontact</url-pattern>
-	</servlet-mapping>
-
-
-	<servlet>
-		<servlet-name>groupcontactremoval</servlet-name>
-		<servlet-class>servlets.GroupContactsRemoveServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>groupcontactremoval</servlet-name>
-		<url-pattern>/groupcontactremoval</url-pattern>
-	</servlet-mapping>
-
-
-
-	<servlet>
-		<servlet-name>creategroup</servlet-name>
-		<servlet-class>servlets.CreateGroupServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>creategroup</servlet-name>
-		<url-pattern>/creategroup</url-pattern>
-	</servlet-mapping>
-
-
-
-	<servlet>
-		<servlet-name>deletegroup</servlet-name>
-		<servlet-class>servlets.DeleteUserGroupServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>deletegroup</servlet-name>
-		<url-pattern>/deletegroup</url-pattern>
-	</servlet-mapping>
-
-
-
-	<servlet>
-		<servlet-name>userupdate</servlet-name>
-		<servlet-class>servlets.UserProfileUpdateServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>userupdate</servlet-name>
-		<url-pattern>/userupdate</url-pattern>
-	</servlet-mapping>
-
-
-
 	<servlet>
 		<servlet-name>signup</servlet-name>
-		<servlet-class>servlets.SignupServlet</servlet-class>
+		<servlet-class>com.zohocontacts.servlets.SignupServlet</servlet-class>
 
 	</servlet>
 	<servlet-mapping>
@@ -223,92 +124,18 @@
 	</servlet-mapping>
 
 
-
 	<servlet>
-		<servlet-name>updategroup</servlet-name>
-		<servlet-class>servlets.UpdateUserGroupServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>updategroup</servlet-name>
-		<url-pattern>/updategroup</url-pattern>
-	</servlet-mapping>
-
-
-
-
-	<servlet>
-		<servlet-name>addcontacts</servlet-name>
-		<servlet-class>servlets.AddContactServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>addcontacts</servlet-name>
-		<url-pattern>/addcontact</url-pattern>
-	</servlet-mapping>
-
-
-	<servlet>
-		<servlet-name>updateprofile</servlet-name>
-		<servlet-class>servlets.UserProfileServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>updateprofile</servlet-name>
-		<url-pattern>/updateprofile</url-pattern>
-	</servlet-mapping>
-
-
-	<servlet>
-		<servlet-name>deletecontacts</servlet-name>
-		<servlet-class>servlets.DeleteUserContactServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>deletecontacts</servlet-name>
-		<url-pattern>/deletecontact</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-		<servlet-name>updatecontacts</servlet-name>
-		<servlet-class>servlets.UpdateUserContactServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>updatecontacts</servlet-name>
-		<url-pattern>/updatecontact</url-pattern>
-	</servlet-mapping>
-
-
-
-	<servlet>
-		<servlet-name>getusercontact</servlet-name>
-		<servlet-class>servlets.UserSpecificContactRetrievalServlet</servlet-class>
-
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>getusercontact</servlet-name>
-		<url-pattern>/GetAndUpdatecontact</url-pattern>
-	</servlet-mapping>
-
-
-
-<servlet>
 		<servlet-name>oauthdirector</servlet-name>
-		<servlet-class>servlets.GoogleOauthdirectorServlet</servlet-class>
-
+		<servlet-class>com.zohocontacts.servlets.GoogleOauthdirectorServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>oauthdirector</servlet-name>
 		<url-pattern>/oauthdirector</url-pattern>
 	</servlet-mapping>
 
-
-
-
-<servlet>
+	<servlet>
 		<servlet-name>oauthredirect</servlet-name>
-		<servlet-class>servlets.GoogleOauthRedirectServlet</servlet-class>
+		<servlet-class>com.zohocontacts.servlets.GoogleOauthRedirectServlet</servlet-class>
 
 	</servlet>
 	<servlet-mapping>
